--- a/package.json
+++ b/package.json
@@ -1,24 +1,12 @@
+
 {
-  "name": "awasser-s4---urban-virtual-museum",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "awasser-s4",
+  "version": "1.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "lucide-react": "^0.562.0",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "@google/genai": "^1.34.0",
-    "@supabase/supabase-js": "^2.45.0"
+    "build:css": "tailwindcss -i ./input.css -o ./output.css --minify",
+    "watch:css": "tailwindcss -i ./input.css -o ./output.css --watch"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "tailwindcss": "^3.4.1"
   }
 }
